--- a/desafio09-Videos/estilos/style.css
+++ b/desafio09-Videos/estilos/style.css
@@ -1,5 +1,26 @@
 body {
-    background-color: darkblue;
+    background-color: black;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+}
+p {
+    color: white;
+    border-color: white;
+    border-width: 2000px;
+    border: 500px;
+    border-spacing: 10px;
+    
+}
+iframe {
+    border-width: 5px;
+    border-color: white;
+    border-radius: 10px;
+}
+
+img {
+    border-width: 50px;
+    border-color: white;
+    border-radius: 10px;
+    border-left: 50px;
+    border-image: 15px;
 }
