--- a/desafio10-Site/estilos/style.css
+++ b/desafio10-Site/estilos/style.css
@@ -11,12 +11,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #96F5A1;
     margin: 0px;
+    font-size: 1em;
 }
 
 
 header {
     text-align: center;
-    background-color: #036322;
+    background-image: linear-gradient( #036322,#06cc45);
     
     color: white;
     padding-top: 30px;
@@ -28,13 +29,17 @@ header > h1 {
     font-family: 'Idroid', sans-serif;
 }
 
+header > p {
+    margin-bottom: 25px;
+}
+
 header > nav {
     text-align: left;
     margin-left: 8px;
 }
 
 nav {
-    padding-bottom: 10px;
+    padding-bottom: 8px;
 }
 
 nav > a {
@@ -55,7 +60,7 @@ main {
     margin-top: 0px;
     padding: 6px 10px 15px 10px;
     width: auto;
-    max-width: 1000px;
+    max-width: 900px;
     margin: auto;
     border-radius: 0px 0px 10px 10px;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.473);
@@ -78,12 +83,17 @@ article > h3 {
 }
 
 picture {
-    text-align: center;
-    margin: auto;
+    margin:  30px auto;
     display: block;
 }
-source {
-    align-self: center;
+
+img {
+    margin:  30px auto;
+    display: block;
+}
+
+iframe {
+    display: block;
     margin: auto;
 }
 
