--- a/desafio10-Site/estilos/style.css
+++ b/desafio10-Site/estilos/style.css
@@ -14,6 +14,15 @@ body {
     font-size: 1em;
 }
 
+a, strong {
+    color: #06cc45;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+p>a::after{
+    content: '🔗';
+}
 
 header {
     text-align: center;
@@ -21,8 +30,9 @@ header {
     
     color: white;
     padding-top: 30px;
-    margin-bottom: 0px;
+    margin: 0px;
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.473);
+    
 }
 
 header > h1 {
@@ -42,17 +52,22 @@ nav {
     padding-bottom: 8px;
 }
 
-nav > a {
-    margin-right: 28px;
+#naveg{
+    list-style: none;
+    margin: 0px auto;
+}
+
+#naveg>li {
+    display: inline;
+    margin: 0px;
+}
+
+.navigation {
+    margin-right: 11px;
     text-decoration: none;
     font-weight: bold;
     color: white;
     padding: 8px;
-}
-
-nav > a:hover {
-    background-color: #037c29d5;
-    border-radius: 10px;
 }
 
 main {
@@ -103,21 +118,51 @@ iframe {
     
 }
 
-ul {
-    width: 400;
+div>ul {
+    width: auto;
     margin: auto;
     align-self: center;
-    margin-right: 50px;
+    columns: 2;
+    list-style: '✔️';
 }
 
 li {
     width: 400px;
     align-self: center;
+    
 }
 
-aside {
-    display: inline;
-    margin: 0px auto 0px 300px;
+li>a{
+    color: black;
+    text-decoration: none;
+
+}
+
+a:hover{
+    text-decoration: underline;
+}
+
+.navigation:hover{
+    background-color: #037c2993;
+    border-radius: 10px;
+    text-decoration: none;
+}
+
+#mais {
+    background-color: #96f5a19f ;
+    border-radius: 0px 0px 10px 10px;
+    margin: 0px 10px;
+    padding: 5px 20px;
+}
+
+div > h5 {
+    color: white;
+    font-size: 1em;
+    font-weight: bold;
+    background-color: #06cc45;
+    padding: 15px;
+    margin: 0px 10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 footer {
@@ -125,5 +170,5 @@ footer {
     color: white;
     text-align: center;
     margin-top: 20px;
-    padding: 5px
+    padding: 5px; 
 }
