--- a/desafio10-Site/estilos/style.css
+++ b/desafio10-Site/estilos/style.css
@@ -54,7 +54,8 @@ nav {
 
 #naveg{
     list-style: none;
-    margin: 0px auto;
+    margin: 0px;
+    padding: 0;
 }
 
 #naveg>li {
@@ -63,11 +64,11 @@ nav {
 }
 
 .navigation {
-    margin-right: 11px;
     text-decoration: none;
     font-weight: bold;
     color: white;
     padding: 8px;
+    text-align: center;
 }
 
 main {
