--- a/desafio10-SiteResposta/estilos/style.css
+++ b/desafio10-SiteResposta/estilos/style.css
@@ -147,7 +147,33 @@ main a::after {
     content: '🔗';
 }
 
-footer {
-    background-color: var(--verdeME);
+aside {
+    background-color: var(--verdeCN);
+    padding: 10px;
+    border-radius: 10px;
 }
 
+aside > ul {
+    list-style-position: inside;
+    columns: 2;
+    
+}
+
+footer {
+    background-color: var(--verdeME);
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer > p > a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--verdeCN);
+}
