--- a/desafio10-SiteResposta/estilos/style.css
+++ b/desafio10-SiteResposta/estilos/style.css
@@ -60,7 +60,7 @@ header > p {
     margin: auto;
     padding: 0 10px;
     text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
-    margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 nav {
