--- a/desafio11-Astronauta/estilos/style.css
+++ b/desafio11-Astronauta/estilos/style.css
@@ -1,18 +1,32 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
-
 body {
-    background-image: url(../imagens/espaco.jpg);
-    background-position:  center;
+    height: 98vh;
+    background-color: black;
+    background-image: url('../imagens/espaco.jpg');
+    background-position:  center center;
     background-repeat: no-repeat;
     background-size: cover;
-    max-height: max-content;
+    align-items: center;
 }
 
-img {
-    margin: 25% auto 15% auto;
+main {
+    position: relative;
+    
+    height: 100%;
+    width: 100%;
+}
 
-    display: block;
+
+img {
+    width: 42%;
+    max-width: 500px;
+    min-width: 50px;
+    max-height: 500px;
+    min-height: 50px;
+
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
 }
