--- a/desafio11-Astronauta/estilos/style.css
+++ b/desafio11-Astronauta/estilos/style.css
@@ -5,6 +5,7 @@ body {
     background-position:  center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: scroll;
     align-items: center;
 }
 
