--- a/desafio12-Cordel/estilos/style.css
+++ b/desafio12-Cordel/estilos/style.css
@@ -53,15 +53,25 @@ header a:hover {
 }
 
 main {
-    max-width: 900px;
+    
     background-color: white;
     margin: auto;
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.4);
 }
 
+
+
 article p{
     font-family: var(--fontePadraoCordel);
     font-size: 1.2em;
+    margin-left: 5%;
+}
+
+section p {
+    background-color: rgba(255, 255, 255, 0.2);
+    padding: 20px;
+    text-align: left;
+    width: min-content;
 }
 
 section.especial01 {
