--- a/desafio12-CordelResposta/estilos/style.css
+++ b/desafio12-CordelResposta/estilos/style.css
@@ -70,30 +70,35 @@ section.normal {
     background-color: white;
     color: black;
 
-    box-shadow: 2px 0px 8px rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 13px rgba(0, 0, 0, 0.5);
 }
 
 section.imagem {
     background-color: rgb(68, 68, 68);
     color: white;
+
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.5);
 }
 
 section.imagem > p {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.5);
     display: inline-block;
+    
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
 }
 
 section#img01, section#img02 {
     background-position: right;
     background-attachment: fixed;
+    background-size: cover;
 }
 
 section#img01 {
-    background-image: url(../imagens/background001.jpg);
+    background-image: url('../imagens/background001.jpg');
 }
 
 section#img02 {
-    background-image: url(../imagens/background002.jpg);
+    background-image: url('../imagens/background002.jpg');
 }
 
 
