--- a/desafio16-TeladeLogin/estilos/style.css
+++ b/desafio16-TeladeLogin/estilos/style.css
@@ -4,6 +4,8 @@
     --corPrincipal: #F2C572;
     --cor02: #0C0D0A;
     --corSecundaria: #BFBFBF;
+    --cor04:#F29C72;
+    --cor05:#F2B372;
 }
 
 * {
@@ -29,16 +31,14 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    background-image: black url(../imagens/xicaramarela.jpg);
-
     border-radius: 10px;
 
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.4);
 
     box-sizing: border-box;
 
-    height: 70vh;
-    width: 90vw;
+    height: 80vh;
+    width: 80vw;
 
     background: black url(../imagens/xicaramarela.jpg) no-repeat right fixed;
     background-size: cover;
@@ -51,11 +51,11 @@ section {
 
 section#login-web {
     position: relative;
-    top: 35vh;
+    top: 40vh;
 
     box-sizing: border-box;
-    height: 35vh;
-    width: 90vw;
+    height: 40vh;
+    width: 80vw;
 
     background-color: white;
 
@@ -70,10 +70,13 @@ section h1 {
     padding-bottom: 20px;
     text-align: center;
     font-size: 2em;
+    font-weight: bolder;
+    color: var(--corPrincipal);
+    text-shadow: 1px 1px 2px hsla(80, 13%, 5%, 0.5);
 }
 
 section p {
-    text-align: justify;
+    text-align: center;
     padding-bottom: 20px;
 }
 
@@ -104,13 +107,18 @@ form input.dados {
     line-height: 20px;
     border-radius: 5px;
     width: 60vw;
-    padding: 5px;
+    padding: 8px;
     max-width: 520px
 }
 
+input.dados:hover {
+    border-color: var(--cor04);
+    transition: 0.1s;
+}
+
 .botao {
-    width: 73vw;
-    padding: 5px;
+    width: 70vw;
+    padding: 8px;
     border-radius: 5px;
     font-size: 1.1em;
     box-sizing: border-box;
@@ -119,9 +127,31 @@ form input.dados {
 }
 
 .entrar {
-    background-color: blue;
+    background-color: var(--cor04);
+    border: 3px solid var(--corPrincipal);
+    color: whi;
+}
+
+.entrar:hover {
+    background-color: var(--cor05);
+    border-color: var(--cor04);
+    transition: 0.1s;
 }
 
 .semsenha {
     text-decoration: none;
+    border: 3px solid var(--cor04);
+    color: black;
+    margin-top: 20px;
+    display: block;
+    margin: auto;
+    position: relative;
+    top: 10px;
 }
+
+.semsenha:hover {
+    background-color: var(--corPrincipal);
+    border-color: var(--cor04);
+    transition: 0.1s;
+}
+
